# Projects-Assignments

./: CS412_TP.ipynb  README.md
API Integration For Improved Signup Flow/: .gitignore  Dockerfile  pyproject.toml
API Integration For Improved Signup Flow/mapp_sftp/: cli.py  model.py  repository.py  sftp.py
API Integration For Improved Signup Flow/tests/: test_mapp_api.py
Computer Architecture Course Assignments/Dividing a Double-Precision IEEE Number by -8/: CS401_lab2_bariscan_25413.s
Computer Architecture Course Assignments/Implementing Insertion Sort and Selection Sort in MIPS Assembly/: CS401TP_bariscan_25413.asm
Computer Architecture Course Assignments/Recursive Algorithm for Verifying Descending Order in Assembly/: CS401_Lab1_25413 (1).asm
Data Structures Course Assignments/Heap Management with Different Allocation Protocols/: my_heap.cpp  my_heap.h
Data Structures Course Assignments/Mapping Cities in Coordinate Tree Quadrants/: CS300_Assignment2.cpp  CS300_Assignment2.h
Data Structures Course Assignments/Stadium Seat Reserver/: CS300_A4.cpp  CS300_A4.h
E-Commerce Website/online_project_web_fe/: .gitignore  (+2 more)
ML Model For Stocks Forecasting/: data_extraction_daily_adjusted.ipynb  data_extraction_intraday.ipynb  data_postprocessing.ipynb  data_preprocessing.ipynb  eodhd_data_extraction_daily_adjusted.ipynb  ml_forecast.ipynb  results_comparison.ipynb
Sales Prediction and Sensitivity Analysis ML Project/: MLnewData.py  MLnewInput.py  sales_metrics_DNN_2.py  sales_metrics_LINEAR.py  sales_metrics_ML.py  sales_metrics_correlation.py  working.py
(+520 files in other folders)
